[project]
name = "sak"
version = "1.1.0"
description = "CLI to help with various tasks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cairosvg>=2.7.1",
    "emoji>=2.14.0",
    "httpx>=0.27.2",
    "openai>=1.51.2",
    "pillow>=11.0.0",
    "pydantic>=2.9.2",
    "pymdown-extensions>=10.11.2",
    "pyperclip>=1.9.0",
    "pyyaml>=6.0.2",
    "typer>=0.15.1",
    "validators>=0.34.0",
]

[project.scripts]
sak = "sak.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
dev-dependencies = [
    "ruff>=0.6.9",
]
